Fix header logo size and spacing

--- a/css/_images.scss
+++ b/css/_images.scss
@@ -9,6 +9,10 @@
   @include img-fluid;
 }
 
+.img-logo {
+  width: 150px;
+  padding right: 10px;
+}
 
 // Image thumbnails
 .img-thumbnail {
